--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,13 @@
 name: Kwiki-Icons-Gnome
-version: 0.10
+version: 0.11
 abstract: Kwiki Gnome Icons Plugin
-author: Brian Ingerson <ingy@cpan.org>
+author: Ian Langworth <langworth.com>
 license: gpl
 distribution_type: module
 requires:
   perl: 5.6.1
   Kwiki: 0.30
+  Kwiki::Icons: 0
 no_index:
   directory:
     - inc
